--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,13 @@
 html {
     background-color: #F4F5F5;
     min-height: 100%;
-    font-family: -apple-system, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
-    color: #333;
 }
 
 body {
     background-color: #F4F5F5;
+    font-size: 16px;
+    font-family: -apple-system, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
+    color: #333;
 }
 
 a, a:link, a:visited {
