--- a/src/style/markdown.css
+++ b/src/style/markdown.css
@@ -9,7 +9,7 @@
     line-height: 1.5;
     /* color: #24292e; */
     font-family: -apple-system, "PingFang SC", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 16px;
+    font-size: 19.5px;
     line-height: 1.5;
     word-wrap: break-word;
 
@@ -268,12 +268,12 @@
 }
 
 .markdown-body h2 {
-    font-size: 24px;
+    font-size: 1.6em;
     font-weight: 600;
 }
 
 .markdown-body h3 {
-    font-size: 20px;
+    font-size: 1.6em;
     font-weight: 600;
 }
 
@@ -504,7 +504,7 @@
 }
 
 .markdown-body h3 {
-    font-size: 1.25em;
+    font-size: 1.6em;
 }
 
 .markdown-body h4 {
@@ -638,7 +638,7 @@
     overflow: auto;
     font-size: 85%;
     line-height: 1.45;
-    background-color: #f6f8fa;
+    /* background-color: #f6f8fa; */
     border-radius: 3px;
 }
 
